--- a/footer.css
+++ b/footer.css
@@ -138,7 +138,9 @@
             padding: .8rem 10rem;
             text-align: center;
             color: #999;
-            word-spacing: .8ch;
+            padding-top: 2%;
+            padding-bottom: 2%;
+            font-size: 15px;
         }
 
         @media(max-width: 991px) {
@@ -155,3 +157,13 @@
                 margin-bottom: 4rem;
             }
         }
+        header{
+            font-size: 18px;
+            text-align: center;
+            padding-top: 7px;
+            padding-bottom: 7px;
+            background:lightseagreen;
+          }
+          h1 {
+            font-size: 20px;
+          } 
