--- a/style.css
+++ b/style.css
@@ -58,3 +58,80 @@ textarea.contact-form-text{
 .contact-form-btn:hover{
   background: #2980b9;
 }
+
+
+nav{
+	transform: translate(1%, -2772%);
+	position: absolute;
+	margin: 270px auto 0;
+	width: 600px;
+	height: 35px;
+	background: #34495e;
+	border-radius: 8px;
+	font-size: 0;
+	box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
+}
+nav a{
+	font-size: 15px;
+	text-transform: uppercase;
+	color: white;
+	text-decoration: none;
+	line-height: 35px;
+	position: relative;
+	z-index: 1;
+	display: inline-block;
+	text-align: center;
+}
+nav .animation{
+	position: absolute;
+	height: 100%;
+	/* height: 5px; */
+	top: 0;
+	/* bottom: 0; */
+	z-index: 0;
+	background: #1abc9c;
+	border-radius: 8px;
+	transition: all .5s ease 0s;
+}
+nav a:nth-child(1){
+	width: 150px;
+}
+nav .start-home, a:nth-child(1):hover~.animation{
+	width: 150px;
+	left: 0;
+}
+nav a:nth-child(2){
+	width: 150px;
+}
+nav a:nth-child(2):hover~.animation{
+	width: 150px;
+	left: 150px;
+}
+nav a:nth-child(3){
+	width: 150px;
+}
+nav a:nth-child(3):hover~.animation{
+	width: 150px;
+	left: 300px;
+}
+nav a:nth-child(4){
+	width: 150px;
+}
+nav a:nth-child(4):hover~.animation{
+	width: 150px;
+	left: 450px;
+}
+
+.center1 {
+	position: absolute;
+	color: white;
+	top: 20%;
+	left: 50%;
+	transform: translate(-40%, 100%);
+	font-size: 	50px;
+	font-weight: bold;
+    text-align: top-left;
+}
+img {
+  filter: grayscale(60%);
+}
